K8s/base/cart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  labels:
    app: cartservice
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
        - name: cartservice
          image: ghcr.io/open-telemetry/demo:1.12.0-cartservice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: service
          resources:
            requests:
              cpu: "100m"
              memory: "80Mi"
            limits:
              cpu: "200m"
              memory: "160Mi"
