K8s/base/cart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  labels:
    app: cartservice
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
    - name: service
      port: 8080
      targetPort: 8080
