K8s/base/cart/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartservice
spec:
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: valkey
      ports:
        - port: 6379
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
    - to:
        - podSelector:
            matchLabels:
              app: opentelemetry-demo-otelcol
      ports:
        - port: 4317
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
